Fixed imports for Asserts in resume testers